// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | ScrollableCard Default Story 1`] = `
.c5 {
  margin-bottom: 20px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c8 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  display: block;
}

.c3 {
  padding: 20px;
}

.c12 .c2 {
  padding-bottom: 8px;
}

.c6 {
  position: relative;
}

.c11 {
  height: 16px;
  width: 16px;
  position: absolute;
  bottom: 0;
  right: 0;
  background: red;
  pointer-events: none;
}

.c9 {
  padding: 8px;
}

@media (min-width:976px) {
  .c0 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
  }
}

@media (min-width:976px) {
  .c4 {
    max-height: 100%;
    overflow-y: auto;
  }

  .c4::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    bottom: 20px;
    pointer-events: none;
    background: rgb(255,255,255);
    background: linear-gradient(0deg,rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
    opacity: 1;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2 c3"
  >
    Title
  </header>
  <div
    className="c4 c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <ul
          className="c8"
        >
          <li
            className="c9 c10"
          >
            Lorem ipsum dolor sit amet
          </li>
          <li
            className="c9 c10"
          >
            Sed consequat erat lacinia
          </li>
          <li
            className="c9 c10"
          >
            Class aptent taciti sociosqu
          </li>
          <li
            className="c9 c10"
          >
            Aliquam bibendum tortor dui
          </li>
          <li
            className="c9 c10"
          >
            Quisque ac ullamcorper eros
          </li>
          <li
            className="c9 c10"
          >
            Etiam urna elit, mollis vel arcu id
          </li>
          <li
            className="c9 c10"
          >
            Sed consequat erat lacinia
          </li>
          <li
            className="c9 c10"
          >
            Aliquam bibendum tortor dui
          </li>
        </ul>
      </div>
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | ScrollableCard With Height Contained 1`] = `
.c6 {
  margin-bottom: 20px;
}

.c8 {
  padding-left: 16px;
  padding-right: 16px;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c9 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c11 {
  display: block;
}

.c4 {
  padding: 20px;
}

.c13 .c3 {
  padding-bottom: 8px;
}

.c7 {
  position: relative;
}

.c12 {
  height: 16px;
  width: 16px;
  position: absolute;
  bottom: 0;
  right: 0;
  background: red;
  pointer-events: none;
}

.c0 {
  height: 250px;
}

.c10 {
  padding: 8px;
}

@media (min-width:976px) {
  .c1 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
  }
}

@media (min-width:976px) {
  .c5 {
    max-height: 100%;
    overflow-y: auto;
  }

  .c5::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    bottom: 20px;
    pointer-events: none;
    background: rgb(255,255,255);
    background: linear-gradient(0deg,rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
    opacity: 1;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <header
      className="c3 c4"
    >
      Height contained
    </header>
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <ul
            className="c9"
          >
            <li
              className="c10 c11"
            >
              Lorem ipsum dolor sit amet
            </li>
            <li
              className="c10 c11"
            >
              Sed consequat erat lacinia
            </li>
            <li
              className="c10 c11"
            >
              Class aptent taciti sociosqu
            </li>
            <li
              className="c10 c11"
            >
              Aliquam bibendum tortor dui
            </li>
            <li
              className="c10 c11"
            >
              Quisque ac ullamcorper eros
            </li>
            <li
              className="c10 c11"
            >
              Etiam urna elit, mollis vel arcu id
            </li>
            <li
              className="c10 c11"
            >
              Sed consequat erat lacinia
            </li>
            <li
              className="c10 c11"
            >
              Aliquam bibendum tortor dui
            </li>
          </ul>
        </div>
        <div
          className="c12"
        />
      </div>
    </div>
  </div>
</div>
`;
